# JKMP.Plugin.Multiplayer

./: .gitignore  DevVars.targets.example  JKMP.Plugin.Multiplayer.sln
.github/workflows/: create-release.yml
JKMP.Plugin.Multiplayer/: InputKeys.cs  JKMP.Plugin.Multiplayer.csproj  MultiplayerPlugin.cs  plugin.json
JKMP.Plugin.Multiplayer/Collections/: FixedQueue.cs
JKMP.Plugin.Multiplayer/Configuration/: MatchmakingConfig.cs  UiConfig.cs  VoiceConfig.cs
JKMP.Plugin.Multiplayer/Content/: BuildProject.mgcb
JKMP.Plugin.Multiplayer/Game/: Content.cs  SceneType.cs
JKMP.Plugin.Multiplayer/Matchmaking/: MatchmakingManager.cs
JKMP.Plugin.Multiplayer/Memory/: MemoryExtensions.cs  Pool.cs
JKMP.Plugin.Multiplayer/Networking/: CodecSink.cs  Framed.cs  GameMessage.cs  GameMessagesCodec.cs  IBinarySerializable.cs  MessageType.cs  P2PEvents.cs  P2PManager.Connection.cs  P2PManager.ConnectionManager.cs  P2PManager.PeerManager.cs  (+3 more)
Matchmaking.Client/: EncodingUtility.cs  Events.cs  HostnameNotFoundException.cs  Matchmaking.Client.csproj  MatchmakingClient.cs  MatchmakingConnectException.cs
Resources/: ResourceManager.cs  Resources.csproj  ResourcesAssetManager.cs
native/multiplayer_native/: Cargo.toml
native/multiplayer_native/bindings_generator/: .gitignore  Cargo.toml  rust-toolchain.toml
native/multiplayer_native/bindings_generator/src/: main.rs
native/multiplayer_native/src/: compression.rs  lib.rs  logging.rs
native/multiplayer_native/src/audio_capture/: capture_context.rs  compression.rs  context.rs  device_information.rs  mod.rs  opus_context.rs
(+110 files in other folders)
